@startuml

title __RECYCLEVIEW's Class Diagram__\n

  namespace com.itbird.design {
    namespace decorator {
      namespace recycleview {
        class com.itbird.design.decorator.recycleview.WrapperRecycleView {
            + WrapperRecycleView()
            + WrapperRecycleView()
            + WrapperRecycleView()
            + addFootView()
            + addHeadView()
            + getAdapter()
            + removeFootView()
            + removeHeadView()
            + setAdapter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace decorator {
      namespace recycleview {
        class com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter {
            ~ adapter : Adapter
            ~ footViews : List<View>
            ~ headViews : List<View>
            + WrapperRecyclerAdapter()
            + addFootView()
            + addHeadView()
            + getItemCount()
            + getItemViewType()
            + onBindViewHolder()
            + onCreateViewHolder()
            + removeFootView()
            + removeHeadView()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace decorator {
      namespace recycleview {
        class com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter.WrapperViewHolder {
            + WrapperViewHolder()
        }
      }
    }
  }
  

  com.itbird.design.decorator.recycleview.WrapperRecycleView -up-|> androidx.recyclerview.widget.RecyclerView
  com.itbird.design.decorator.recycleview.WrapperRecycleView o-- com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter : wrapperRecyclerAdapter
  com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter +-down- com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter.WrapperViewHolder
  com.itbird.design.decorator.recycleview.WrapperRecyclerAdapter.WrapperViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
